# 2022-phragics

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/sandbox/: cpp_to_glsl.cpp  main.cpp
phragics/: CMakeLists.txt
phragics/app/dag/: CMakeLists.txt  main.cpp
phragics/app/viewer/: CMakeLists.txt  application.hpp  config.hpp  cube_geometry.hpp  main.cpp
phragics/common/: default.hpp  none.hpp
phragics/common/compiler/: detect.define.hpp  detect.undef.hpp  inlining.define.hpp  inlining.undef.hpp
phragics/common/os/: breakpoint.hpp  os.hpp
phragics/dep/: CMakeLists.txt
phragics/dep/assimp/: CMakeLists.txt  all.hpp
phragics/dep/catch2/: CMakeLists.txt
phragics/dep/fmt/: CMakeLists.txt
phragics/dep/glfw/: CMakeLists.txt
phragics/dep/glm/: CMakeLists.txt  all.hpp
phragics/dep/imgui/: CMakeLists.txt  all.hpp
phragics/dep/stb/: CMakeLists.txt
phragics/dep/std/: CMakeLists.txt
phragics/dep/std/chrono/: all.hpp
phragics/dep/std/filesystem/: filesystem.cpp  filesystem.hpp
phragics/dep/std/io/: eof.hpp  fstream.hpp
phragics/service/log/: CMakeLists.txt  logging.hpp  main.cpp
phragics/service/metadata/: CMakeLists.txt  interface.hpp  interface.inl  interface.specs.cpp  metadata.cpp  store.hpp
phragics/service/opengl/: interface.hpp
phragics/service/rendering/: interface.hpp
phragics/service/storage/: CMakeLists.txt  interface.hpp  interface.specs.cpp  storage.cpp
phragics/service/storage/impl/: file.hpp  impl.hpp  impl.inl
phragics/service/time/: CMakeLists.txt  interface.hpp  interface.inl  interface.specs.cpp  timing.cpp
phragics/service/ui/: interface.hpp
phragics/shading/: background.frag  background.vert  cube.frag  cube.vert  graticule.frag  sphere.vert
src/: CMakeLists.txt
src/phraghics/: CMakeLists.txt
src/phraghics/app/viewer/: CMakeLists.txt  main.cpp
src/phraghics/common/: file.hpp  gpu.hpp  modeling.hpp
src/phraghics/common/communicating/: all.hpp  callbacks.hpp  emitter.hpp  link_end.bdd.hpp  link_end.hpp  none.hpp  receiver_slot.hpp  tags.hpp
src/phraghics/common/file/: all.hpp  content.hpp  context.hpp  exceptions.hpp
src/phraghics/common/gpu/: all.hpp  frame_buffer.hpp  gl.hpp  handles.hpp  ids.hpp  material.hpp  program.hpp  resources.hpp  shader_storage.hpp  tags.hpp
src/phraghics/common/gpu/context/: context.hpp
src/phraghics/common/gpu/opengl/: all.hpp
src/phraghics/common/logging/: all.hpp  entry.hpp  timestamp.hpp
src/phraghics/common/logging/logger/: memory.hpp  storage.hpp
src/phraghics/common/modeling/: camera.hpp  directions.hpp  geometry.hpp  mesh.hpp
src/phraghics/common/typing/: NullTerminated.hpp  all.hpp
src/phraghics/core/: shading.hpp
src/phraghics/core/shading/: billboard.hpp  camera.hpp  directional_light.hpp  model.hpp  point_light.hpp  ssbo.hpp
src/phraghics/core/windowing/: GpuManager.hpp  GpuManager.inl  MainInterface.hpp  MainInterface.inl  context.hpp
src/phraghics/core/windowing/context/: update.hpp
src/phraghics/core/windowing/file/: manager.hpp  open_dialog.hpp
src/phraghics/core/windowing/inspecting/: file.hpp  texture.hpp
src/phraghics/core/windowing/managing/: scene.hpp
src/phraghics/dep/: CMakeLists.txt
src/phraghics/dep/glad/: CMakeLists.txt
src/phraghics/dep/glfw/: CMakeLists.txt
src/phraghics/dep/glm/: CMakeLists.txt
src/phraghics/dep/imgui/: CMakeLists.txt  wrappers.hpp
src/phraghics/dep/std/: CMakeLists.txt
src/phraghics/dep/std/container/: map.hpp
src/phraghics/dep/std/io/: istream.hpp
src/phraghics/example/: CMakeLists.txt
src/phraghics/example/file_managing/: CMakeLists.txt  main.cpp
src/phraghics/example/imgui_demo/: CMakeLists.txt
src/phraghics/example/sandbox/: main.cpp
src/phraghics/example/sandbox2/: CMakeLists.txt
src/phraghics/example/sandbox3/: CMakeLists.txt  main.cpp
src/phraghics/example/sandbox_log/: CMakeLists.txt  app.hpp  log_manager.hpp  main.cpp
src/phraghics/test/: CMakeLists.txt
src/phraghics/test/unit/: communicating.cpp
src/piecewise/: common.hpp
src/piecewise/common/numeric/: rounding.hpp
test/: CMakeLists.txt
test/piecewise/common/numeric/: rounding.cpp
tool/preprocessor/: main.cpp
